--- a/CiTy-Study_2023/week10.ipynb
+++ b/CiTy-Study_2023/week10.ipynb
@@ -156,6 +156,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "def solution(p, location):\n",
+    "    result = 0\n",
+    "    que = deque(p)\n",
+    "    m = [0 for i in range(len(p))]\n",
+    "    m[location] = 1\n",
+    "    m = deque(m)\n",
+    "    while que:\n",
+    "        pop = que.popleft()\n",
+    "        check = m.popleft()\n",
+    "        if len(que) > 1 and max(que) > pop :\n",
+    "            que.append(pop)\n",
+    "            m.append(check)\n",
+    "        else:\n",
+    "            result += 1\n",
+    "            if check == 1:\n",
+    "                return result \n",
+    "            \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
