--- a/CiTy-Study_2023/week10.ipynb
+++ b/CiTy-Study_2023/week10.ipynb
@@ -163,20 +163,32 @@
    "source": [
     "from collections import deque\n",
     "def solution(p, location):\n",
+    "    # loaction의 실행 순서를 담을 변수\n",
     "    result = 0\n",
     "    que = deque(p)\n",
+    "    # location의 위치 확인용\n",
     "    m = [0 for i in range(len(p))]\n",
     "    m[location] = 1\n",
     "    m = deque(m)\n",
     "    while que:\n",
+    "        # 꺼내기\n",
     "        pop = que.popleft()\n",
+    "        # 해당 문서가 location인지 꺼내기\n",
     "        check = m.popleft()\n",
+    "        # que에서 최댓값 (즉 최고우선순위)가 꺼낸 문서의 순위보다 크면\n",
+    "        # len(que) > 1 을 꼭 넣고, max~보다 앞에 둬야 런타임 에러 발생 안함\n",
+    "        # max~를 하려면 2개 이상이 필요하기 때문에 넣어줘야 함.\n",
     "        if len(que) > 1 and max(que) > pop :\n",
+    "            # 인쇄 안함 / 고로 그대로 마지막에 넣어줌\n",
     "            que.append(pop)\n",
     "            m.append(check)\n",
+    "        # 우선순위가 가장 높은 것\n",
     "        else:\n",
+    "            # result에 1을 더해줌\n",
     "            result += 1\n",
+    "            # 근데 이 pop이 location이다?\n",
     "            if check == 1:\n",
+    "                # result 리턴\n",
     "                return result \n",
     "            \n"
    ]
