--- a/CiTy-Study_2023/week11.ipynb
+++ b/CiTy-Study_2023/week11.ipynb
@@ -38,11 +38,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이전 풀이 코드\n",
+    "def solution(nums):\n",
+    "    give = len(nums)//2\n",
+    "    new = len(set(nums))\n",
+    "    return give if new > give else new\n",
+    "\n",
+    "# 해시를 사용한 풀이 코드\n",
+    "def solution(nums):\n",
+    "    give = len(nums)//2\n",
+    "    d = {}\n",
+    "    for v in nums:\n",
+    "        if v in d:\n",
+    "            d[v] += 1\n",
+    "        else:\n",
+    "            d[v] = 1\n",
+    "    return give if len(d) > give else len(d)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 완주하지 못한 선수\n",
-    "~ 이전 풀이 ~"
+    "### 완주하지 못한 선수"
    ]
   },
   {
@@ -51,6 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 이전 풀이 코드(해시 사용)\n",
     "def solution(participant, completion):\n",
     "    dic = {}\n",
     "    for i in participant:\n",
