전화번호 목록

--- a/CiTy-Study_2023/week11.ipynb
+++ b/CiTy-Study_2023/week11.ipynb
@@ -98,6 +98,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(pb):\n",
+    "    pb.sort()\n",
+    "    \n",
+    "    for i in range(len(pb)-1):\n",
+    "        if pb[i] == pb[i+1][:len(pb[i])]:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른분 풀이 (해시)\n",
+    "def solution(phone_book):\n",
+    "    # 정렬\n",
+    "    phone_book.sort(key=len)\n",
+    "    hash_table = {}\n",
+    "\n",
+    "    # 맨 처음 가장 짧은 길이를 저장. min.\n",
+    "    min_len = len(phone_book[0])\n",
+    "\n",
+    "    for target in phone_book:\n",
+    "        # loop마다 본인 정보를 hash table에 저장.\n",
+    "        hash_table[hash(target)] = target\n",
+    "        # min길이부터 +1씩 해서 본인 길이까지 hash table에서 검색.\n",
+    "        # 있으면 false, 없으면 true-계속 진행.\n",
+    "        for i in range(min_len,len(target)):\n",
+    "            try:\n",
+    "                if hash_table[hash(target[0:i])]:\n",
+    "                    return False\n",
+    "            except KeyError:\n",
+    "                print('key error')\n",
+    "                # 아무 동작 안 해도 됨.\n",
+    "\n",
+    "    return True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
