--- a/CiTy-Study_2023/week11.ipynb
+++ b/CiTy-Study_2023/week11.ipynb
@@ -147,14 +147,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 베스트 앨범"
+    "#### 의상"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(clothes):\n",
+    "    d = {}\n",
+    "    # 의상의 종류별로 구분\n",
+    "    for i in clothes:\n",
+    "        if i[1] in d:\n",
+    "            d[i[1]] += 1\n",
+    "        else:\n",
+    "            d[i[1]] = 1\n",
+    "            \n",
+    "    num = 1 \n",
+    "    # 순열을 이용하여 계산\n",
+    "    for v in d.values():\n",
+    "        num = (v+1)*num\n",
+    "    # 마지막에 1을 빼는 이유\n",
+    "    # 모두 안 입는 경우도 포함되기 때문에 해당 경우는 빼준다\n",
+    "    return num-1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 의상"
+    "얼굴 : 안입음, 동그란 안경, 검정 선글라스  \n",
+    "상의 : 안입음, 파란색 티셔츠  \n",
+    "하의 : 안입음, 청바지  \n",
+    "\n",
+    "입지 않을때 1을 더해서 조합을 구하면 구해진 조합 내에서 (안입음, 안입음, 청바지), (안입음, 파란색 티셔츠, 청바지) 이런식으로도 조합이 되기 때문에 하나만 입을때, 두개 입을때, ... 을 다 구해줍니다  \n",
+    "대신 (안입음, 안입음, 안입음) 이런 조합도 나올 수 있기 때문에 1을 빼주는거예요"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 베스트 앨범"
    ]
   }
  ],
