--- a/CiTy-Study_2023/week11.ipynb
+++ b/CiTy-Study_2023/week11.ipynb
@@ -17,6 +17,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 분 풀이\n",
+    "from collections import deque\n",
+    "\n",
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    # 다리에 있는 트럭\n",
+    "    queue = deque([0]*bridge_length)\n",
+    "    # 트럭\n",
+    "    orders = deque(truck_weights)\n",
+    "    time=0\n",
+    "    total=0\n",
+    "    # 트럭들 있을 때 까지만 반복 (즉, 모두 다리를 건너면 반복 종료)\n",
+    "    while orders:\n",
+    "        # 다리를 한칸 건너갔기에 total에서 queue의 가장 첫번째를 빼주고, 삭제한다\n",
+    "        time+=1\n",
+    "        # 다리 위에 올라가있는 트럭의 총 무게\n",
+    "        total -= queue[0]\n",
+    "        queue.popleft()\n",
+    "        # 만약 다리의 하중이 여유가 되지 않는다면 \n",
+    "        if total + orders[0] > weight:\n",
+    "            # 무게가 0짜리인 트럭을 넣어준다\n",
+    "            queue.append(0)\n",
+    "        # 만약 다리의 하중이 여유가 된다면\n",
+    "        else:\n",
+    "            # total에 w를 더해주고\n",
+    "            w = orders.popleft()\n",
+    "            total+=w\n",
+    "            #queue(다리)에 w를 넣어준다\n",
+    "            queue.append(w)\n",
+    "\n",
+    "    return time+bridge_length"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
