--- a/CiTy-Study_2023/week11.ipynb
+++ b/CiTy-Study_2023/week11.ipynb
@@ -58,7 +58,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 주식가격"
+    "#### 주식가격\n",
+    "[Programmers: 주식가격 (Python)](https://www.pymoon.com/entry/Programmers-%EC%A3%BC%EC%8B%9D%EA%B0%80%EA%B2%A9-Python)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 분 풀이\n",
+    "def solution(prices):\n",
+    "    # 정답의 전체 길이는 prices 와 동일하다. 그래서 prices 길이만큼 0 으로 초기화 시켜주었다.\n",
+    "    answer = [0 for _ in range(len(prices))]\n",
+    "    stack = list()\n",
+    "    # 0 번쨰 값은 미리 스택에 넣어두었다.\n",
+    "    stack.append(0)\n",
+    "    \n",
+    "    # prices 를 인덱스 접근으로 순회\n",
+    "    for index in range(1, len(prices)):\n",
+    "        # 스택에 값이 있고, 스택의 가장 마지막 (last) 값이 현재 price 보다 크다면 주식 값이 떨어진 것이다.\n",
+    "        # 스택의 가장 마지막 값은 인덱스 값이므로 prices[stack[-1]] 로 비교하였다.\n",
+    "        while stack and prices[stack[-1]] > prices[index]:\n",
+    "            # 현재 price 보다 큰 주식 을 찾는다.\n",
+    "            # 바꿔 말하면 index 시점에서 주식이 떨어졌다고 봐도 되는 index 이전의 모든 주식을 찾는다는 얘기다.\n",
+    "            # index 이전의 모든 주식은 stack 에 넣어놨기 때문에 stack 을 반복문으로 돈다.\n",
+    "            prev = stack.pop()\n",
+    "            # prev 는 index 이전의 어느 값이다\n",
+    "            # 조건에선 단순 비교를 했고 여기서 실제로 pop 을 해 준다. (파이썬에선 자바의 poll, peek 메서드가 없기 때문)\n",
+    "            # prev 시점에 샀던 주식 > index 시점의 주식이 된다.\n",
+    "            # 이 인덱스 간의 차이가 기간 (초) 가 된다.\n",
+    "            answer[prev] = (index - prev)\n",
+    "        \n",
+    "        # 현재 주식에 해당하는 index를 넣어준다.\n",
+    "        stack.append(index)\n",
+    "    \n",
+    "    # 여기까지 왔으면 prices 를 전부 순회하였다.\n",
+    "    for i in range(len(answer)):\n",
+    "        # answer[i] 가 0 이라는 의미는 i 시점에 한번도 주식이 떨어지지 않았다는 것이다.\n",
+    "        if answer[i] == 0:\n",
+    "            # 그러면 len(prices) 만큼의 시간 동안 끝까지 떨어지지 않았다는 의미이므로\n",
+    "            # 전체 prices 길이 - i - 1 을 업데이트 해준다.\n",
+    "            answer[i] = len(prices) - i - 1\n",
+    "    return answer"
    ]
   },
   {
