--- a/CiTy-Study_2023/week12.ipynb
+++ b/CiTy-Study_2023/week12.ipynb
@@ -45,6 +45,40 @@
     "def solution(sizes):\n",
     "    return max(max(x) for x in sizes) * max(min(x) for x in sizes)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 모의고사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(answers):\n",
+    "    a = [1,2,3,4,5]\n",
+    "    b = [2, 1, 2, 3, 2, 4, 2, 5]\n",
+    "    c = [3, 3, 1, 1, 2, 2, 4, 4, 5, 5]\n",
+    "    scores = [0,0,0]\n",
+    "    \n",
+    "    for i in range(len(answers)):\n",
+    "        if answers[i] == a[((i+1)%len(a))-1]:\n",
+    "            scores[0] += 1\n",
+    "        if answers[i] == b[((i+1)%len(b))-1]:\n",
+    "            scores[1] += 1\n",
+    "        if answers[i] == c[((i+1)%len(c))-1]:\n",
+    "            scores[2] += 1\n",
+    "            \n",
+    "    result = []\n",
+    "    for k in range(len(scores)):\n",
+    "        if scores[k] == max(scores):\n",
+    "            result.append(k+1)\n",
+    "    return result\n"
+   ]
   }
  ],
  "metadata": {
