--- a/CiTy-Study_2023/week12.ipynb
+++ b/CiTy-Study_2023/week12.ipynb
@@ -79,6 +79,69 @@
     "            result.append(k+1)\n",
     "    return result\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 피로도"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9, 13, 15 실패\n",
+    "def solution(k, dungeons):\n",
+    "    new = []\n",
+    "    result = 0\n",
+    "    for i in range(len(dungeons)):\n",
+    "        new.append([dungeons[i][0]-dungeons[i][1],i])\n",
+    "    \n",
+    "    sort_dun = []\n",
+    "    for i in sorted(new)[::-1]:\n",
+    "        sort_dun.append(dungeons[i[1]])\n",
+    "    \n",
+    "    for i in sort_dun:\n",
+    "        if i[0] <= k:\n",
+    "            k -= i[1]\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 순열을 이용하여 풀이\n",
+    "from itertools import permutations\n",
+    "\n",
+    "def solution(k, dungeons):\n",
+    "    all_per = []\n",
+    "\n",
+    "    for i in permutations(dungeons, len(dungeons)):\n",
+    "        all_per.append(i)\n",
+    "        \n",
+    "    \n",
+    "    result = []\n",
+    "    \n",
+    "    for i in range(len(all_per)):\n",
+    "        cnt = 0\n",
+    "        cp_k = k\n",
+    "        for j in all_per[i]:\n",
+    "            if cp_k >= j[0]:\n",
+    "                cp_k -= j[1]\n",
+    "                cnt += 1\n",
+    "            else:\n",
+    "                break\n",
+    "        result.append(cnt)\n",
+    "    \n",
+    "    return max(result)"
+   ]
   }
  ],
  "metadata": {
